# ChangeLog for dev-db/cdb
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/cdb/ChangeLog,v 1.45 2010/03/30 23:20:28 mabi Exp $

*cdb-0.75-r3 (30 Mar 2010)

  30 Mar 2010; <mabi@gentoo.org> +cdb-0.75-r3.ebuild,
  +files/cdb-0.75-stdint.diff:
  fix file collision (bug #248327) thanks to Rolf Eike Beer for the patch

  01 Aug 2008; Akinori Hattori <hattya@gentoo.org> cdb-0.75-r2.ebuild:
  fixes bug #210730.

  17 Jan 2008; Fabian Groffen <grobian@gentoo.org> cdb-0.75-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  04 Jan 2008; Hanno Boeck <hanno@gentoo.org> cdb-0.75-r2.ebuild:
  Change license to public domain (according to source files).

  17 Nov 2007; Samuli Suominen <drac@gentoo.org> cdb-0.75-r2.ebuild:
  amd64 stable wrt #198575

  14 Nov 2007; Jeroen Roovers <jer@gentoo.org> cdb-0.75-r2.ebuild:
  Stable for HPPA (bug #198575).

  05 Oct 2007; Tom Gall <tgall@gentoo.org> cdb-0.75-r2.ebuild:
  stable on ppc64

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> cdb-0.75-r2.ebuild:
  ppc. stable

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> cdb-0.75-r2.ebuild:
  alpha/ia64/x86 stable

  11 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> cdb-0.75-r2.ebuild:
  Stable on sparc

  24 Apr 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  -cdb-0.75.ebuild, cdb-0.75-r1.ebuild, cdb-0.75-r2.ebuild:
  Remove old versions, cleanup ebuilds, take over maintainership.

  26 Mar 2007; Alec Warner <antarus@gentoo.org> cdb-0.75.ebuild,
  cdb-0.75-r1.ebuild, cdb-0.75-r2.ebuild:
  Remove dependency on portage: ref bug 162516

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> cdb-0.75-r1.ebuild:
  x86 stable

*cdb-0.75-r2 (09 Dec 2006)

  09 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> +cdb-0.75-r2.ebuild:
  Revision bump: Remove redundant deps, make it respect LDFLAGS and add
  ~x86-fbsd keyword

  22 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> ChangeLog: